starts to add firebase

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DISABLE_NEW_JSX_TRANSFORM = true
+REACT_APP_FIREBASE_API_KEY = "AIzaSyBRcmW59JuFqJjGKesJY98FDK4P_iRbHhs"
+REACT_APP_FIREBASE_AUTHDOMAIN = "spooky-slam.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID = "spooky-slam"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "spooky-slam.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "119917931674"
+REACT_APP_FIREBASE_APP_ID = "1:119917931674:web:dd46163f73e09f1b4d4323"
+REACT_APP_FIREBASE_MEASUREMENT_ID = "G-CGY8443GT8"
