--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-bootstrap": "^0.32.27",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1",
     "@uppy/core": "^2.1.1",
     "@uppy/dashboard": "^2.1.1",
     "@uppy/tus": "^2.1.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
