--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uppy/tus": "^2.1.1",
     "bootstrap": "5.1.1",
     "firebase": "^9.1.3",
+    "heic2any": "^0.0.3",
     "local-storage": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
