--- a/package.json
+++ b/package.json
@@ -7,19 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/firebase": "^3.2.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-bootstrap": "^0.32.27",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/uuid": "^8.3.1",
-    "@uppy/core": "^2.1.1",
-    "@uppy/dashboard": "^2.1.1",
-    "@uppy/tus": "^2.1.1",
     "bootstrap": "5.1.1",
     "firebase": "^9.1.3",
+    "heic2any": "^0.0.3",
     "local-storage": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
@@ -29,6 +19,16 @@
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-bootstrap": "^0.32.27",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
