--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -27,8 +26,7 @@
     "@types/react": "^17.0.0",
     "@types/react-bootstrap": "^0.32.27",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/uuid": "^8.3.1"
+    "@types/react-router-dom": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
